womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/missing_identifier/missing_identifier.wdl
version 1.0

workflow Zardoz {
  output {
    Int Boolean = 5
  }
}
